CVEs/CVE-2019-3857 (Libssh2)/Reports/Source Code Reports/CPPCheck.txt
Libssh2/example/scp_write.c:102:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/scp_write.c:111:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/scp_write.c:118:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/scp_write.c:126:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/scp_write_nonblock.c:146:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/scp_write_nonblock.c:153:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_append.c:110:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_append.c:117:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_append.c:128:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_write.c:109:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_write.c:116:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_write.c:127:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_write_nonblock.c:149:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_write_nonblock.c:156:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_write_sliding.c:149:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/example/sftp_write_sliding.c:156:9: error: Resource leak: local [resourceLeak]
        return -1;
        ^
Libssh2/src/kex.c:399:9: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
        exchange_state->exchange_hash = (void *)&exchange_hash_ctx;
        ^
Libssh2/src/kex.c:1059:9: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
        exchange_state->exchange_hash = (void *)&exchange_hash_ctx;
        ^
Libssh2/tests/session_fixture.c:99:11: error: Using pointer to local variable 'wd_buf' that is out of scope. [invalidLifetime]
    chdir(wd);
          ^
Libssh2/tests/session_fixture.c:96:14: note: Array decayed to pointer here.
        wd = wd_buf;
             ^
Libssh2/tests/session_fixture.c:93:14: note: Variable created here.
        char wd_buf[MAXPATHLEN];
             ^
Libssh2/tests/session_fixture.c:99:11: note: Using pointer to local variable 'wd_buf' that is out of scope.
    chdir(wd);
          ^
Libssh2/tests/session_fixture.c:99:11: error: Using pointer to local variable 'wd_buf' that is out of scope. [invalidLifetime]
    chdir(wd);
          ^
Libssh2/tests/session_fixture.c:96:14: note: Array decayed to pointer here.
        wd = wd_buf;
             ^
Libssh2/tests/session_fixture.c:91:14: note: Variable created here.
        char wd_buf[_MAX_PATH];
             ^
Libssh2/tests/session_fixture.c:99:11: note: Using pointer to local variable 'wd_buf' that is out of scope.
    chdir(wd);
          ^
Libssh2/vms/man2help.c:211:20: error: Memory leak: in [memleak]
if ( man == NULL ) return(vaxc$errno);
                   ^
Libssh2/vms/man2help.c:211:20: error: Memory leak: uit [memleak]
if ( man == NULL ) return(vaxc$errno);
                   ^
Libssh2/vms/man2help.c:427:20: error: Resource leak: hlp [resourceLeak]
if ( !(status&1) ) return( status );
                   ^
Libssh2/src/openssl.c:856:6: error: Null pointer dereference: method_len [ctunullpointer]
    *method_len     = 7;
     ^
Libssh2/src/openssl.c:1088:54: note: Calling function gen_publickey_from_rsa_openssh_priv_data, 4th argument is null
        rc = gen_publickey_from_rsa_openssh_priv_data(session, decrypted,
                                                     ^
Libssh2/src/openssl.c:1021:14: note: Calling function gen_publickey_from_rsa_evp, 3rd argument is null
        rc = gen_publickey_from_rsa_evp(session, method, method_len,
             ^
Libssh2/src/openssl.c:856:6: note: Dereferencing argument method_len that is null
    *method_len     = 7;
     ^
Libssh2/src/openssl.c:858:6: error: Null pointer dereference: pubkeydata_len [ctunullpointer]
    *pubkeydata_len = key_len;
     ^
Libssh2/src/openssl.c:1088:54: note: Calling function gen_publickey_from_rsa_openssh_priv_data, 6th argument is null
        rc = gen_publickey_from_rsa_openssh_priv_data(session, decrypted,
                                                     ^
Libssh2/src/openssl.c:1021:14: note: Calling function gen_publickey_from_rsa_evp, 5th argument is null
        rc = gen_publickey_from_rsa_evp(session, method, method_len,
             ^
Libssh2/src/openssl.c:858:6: note: Dereferencing argument pubkeydata_len that is null
    *pubkeydata_len = key_len;
     ^
Libssh2/src/openssl.c:1242:6: error: Null pointer dereference: method_len [ctunullpointer]
    *method_len     = 7;
     ^
Libssh2/src/openssl.c:1387:54: note: Calling function gen_publickey_from_dsa_openssh_priv_data, 4th argument is null
        rc = gen_publickey_from_dsa_openssh_priv_data(session, decrypted,
                                                     ^
Libssh2/src/openssl.c:1320:14: note: Calling function gen_publickey_from_dsa_evp, 3rd argument is null
        rc = gen_publickey_from_dsa_evp(session, method, method_len,
             ^
Libssh2/src/openssl.c:1242:6: note: Dereferencing argument method_len that is null
    *method_len     = 7;
     ^
Libssh2/src/openssl.c:1244:6: error: Null pointer dereference: pubkeydata_len [ctunullpointer]
    *pubkeydata_len = key_len;
     ^
Libssh2/src/openssl.c:1387:54: note: Calling function gen_publickey_from_dsa_openssh_priv_data, 6th argument is null
        rc = gen_publickey_from_dsa_openssh_priv_data(session, decrypted,
                                                     ^
Libssh2/src/openssl.c:1320:14: note: Calling function gen_publickey_from_dsa_evp, 5th argument is null
        rc = gen_publickey_from_dsa_evp(session, method, method_len,
             ^
Libssh2/src/openssl.c:1244:6: note: Dereferencing argument pubkeydata_len that is null
    *pubkeydata_len = key_len;
     ^
nofile:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 configurations. Use --force to check all configurations. For more details, use --enable=information. [toomanyconfigs]

